--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "lib"
+path = "src/lib.rs"
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
